[package]
name = "joshua-rs"
version = "0.1.0"
authors = ["JohnCorby <williamforgames6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "*"
pest_derive = "*"
parking_lot = { version = "*", features = ["nightly", "owning_ref"] }
mangling = "*"
console = "*"
owning_ref = "*"
strum = { version = "*", features = ["derive"] }
string-interner = "*"
quit = "*"
