[package]
name = "joshua-rs"
version = "0.1.0"
authors = ["JohnCorby <williamforgames6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "*"
pest_derive = "*"
mangling = "*"
console = "*"
strum = { version = "*", features = ["derive"] }
quit = "*"
stable_deref_trait = "*"
derivative = "*"
derive-new = "*"

[dev-dependencies]
unindent = "*"
rand = "*"
